add new content tech/exa.md

--- a/public/tech/updisk/index.html
+++ b/public/tech/updisk/index.html
@@ -14,7 +14,7 @@
 
   
   
-  <meta name="description" content="Pretty easy tutorial on increasing Virtualbox VM disk size..." />
+  <meta name="description" content="An easy tutorial on increasing Virtualbox VM disk size..." />
   
   <meta name="keywords" content="Virtual machine, linux, virtualbox, " />
   <link rel="canonical" href="http://localhost:1313/tech/updisk/" />
@@ -68,7 +68,7 @@
   <meta property="og:url" content="http://localhost:1313/tech/updisk/">
   <meta property="og:site_name" content="Wildan&#39;s Workspace">
   <meta property="og:title" content="Increasing Virtual Machine Disk Size in Virtualbox">
-  <meta property="og:description" content="Pretty easy tutorial on increasing Virtualbox VM disk size…">
+  <meta property="og:description" content="An easy tutorial on increasing Virtualbox VM disk size…">
   <meta property="og:locale" content="en_us">
   <meta property="og:type" content="article">
     <meta property="article:section" content="tech">
@@ -81,7 +81,7 @@
   
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Increasing Virtual Machine Disk Size in Virtualbox">
-  <meta name="twitter:description" content="Pretty easy tutorial on increasing Virtualbox VM disk size…">
+  <meta name="twitter:description" content="An easy tutorial on increasing Virtualbox VM disk size…">
 
 
   
@@ -674,7 +674,11 @@
 
 <nav class="pagenav">
   
-  <div></div>
+    <a class="prev" href="/tech/exa/">
+      <span class="direction">« Prev</span>
+      <br>
+      <span> Exa </span>
+    </a>
   
   
     <a class="next" href="/tech/commandinjection/">
