--- a/public/tech/exa/index.html
+++ b/public/tech/exa/index.html
@@ -8,8 +8,8 @@
 
   
   
-  <title>Exa-Eza as a Modern Replacement of ls &middot; Wildan&#39;s Workspace</title>
-  <meta name="title" content="Exa-Eza as a Modern Replacement of ls &middot; Wildan&#39;s Workspace" />
+  <title>Exa-Eza as a Modern Replacement for ls &middot; Wildan&#39;s Workspace</title>
+  <meta name="title" content="Exa-Eza as a Modern Replacement for ls &middot; Wildan&#39;s Workspace" />
   
 
   
@@ -67,7 +67,7 @@
 
   <meta property="og:url" content="http://localhost:1313/tech/exa/">
   <meta property="og:site_name" content="Wildan&#39;s Workspace">
-  <meta property="og:title" content="Exa-Eza as a Modern Replacement of ls">
+  <meta property="og:title" content="Exa-Eza as a Modern Replacement for ls">
   <meta property="og:description" content="Want to improve and modernize your ls appearance and functionality? This is the neo-ls..">
   <meta property="og:locale" content="en_us">
   <meta property="og:type" content="article">
@@ -80,7 +80,7 @@
 
   
   <meta name="twitter:card" content="summary">
-  <meta name="twitter:title" content="Exa-Eza as a Modern Replacement of ls">
+  <meta name="twitter:title" content="Exa-Eza as a Modern Replacement for ls">
   <meta name="twitter:description" content="Want to improve and modernize your ls appearance and functionality? This is the neo-ls..">
 
 
@@ -253,7 +253,7 @@
 
 
 
-<h1 class="pg-title">Exa-Eza as a Modern Replacement of ls</h1>
+<h1 class="pg-title">Exa-Eza as a Modern Replacement for ls</h1>
 
 
 <div class="meta">
@@ -351,7 +351,7 @@
 <p><em>Utility</em> <strong><code>ls</code></strong> adalah <em>command</em> atau perintah standard di sistem operasi seperti Linux untuk menampilkan daftar file atau direktori/folder via terminal. Tapi, seiring perkembangan zaman, orang-orang (khususnya pengguna sistem operasi Unix-<em>based</em>, seperti Linux) mulai bosan dan ingin mencari suasana baru. Akhirnya, muncullah kreativitas yang mewarnai lingkungan Linux itu sendiri, salah satunya seperti yang akan saya bahas di artikel ini, yaitu <em>utility</em> / <em>command</em> <strong><code>exa</code></strong>.</p>
 <p><img loading="lazy" src="/exa/ss1.png" alt="ss1"  title="listing directory&#39;s files and folders via exa command"  />
 </p>
-<p>Seperti terlihat di tangkapan layar (<em>screenshot</em>) di atas, me-<em>list</em>-ing direktori menggunakan <strong><code>exa</code></strong> memberikan kesan yang berbeda dibandingkan dengan menggunakan <strong><code>ls</code></strong>. <strong><code>exa</code></strong> memberikan kesan yang lebih modern dan <em>sophisticated</em> yang tampak dari pemberian warna yang bervariatif, tampilan icon untuk setiap jenis file dan folder, serta bisa model <em>listing</em> dalam format cabang-cabang bergaris.</p>
+<p>Seperti terlihat di tangkapan layar (<em>screenshot</em>) di atas, me-<em>list</em>-ing direktori menggunakan <strong><code>exa</code></strong> memberikan kesan yang berbeda dibandingkan dengan menggunakan <strong><code>ls</code></strong>. <strong><code>exa</code></strong> memberikan kesan yang lebih modern dan <em>sophisticated</em> yang tampak dari pemberian warna yang bervariatif, tampilan icon untuk setiap jenis file dan folder, serta dapat menampilkan model <em>listing</em> dalam format cabang-cabang bergaris.</p>
 <blockquote>
 <p><strong>Note:</strong><br>
 <strong><code>exa</code></strong> dan <strong><code>eza</code></strong> menurut saya adalah dua <em>utility</em> yang beda nama, tapi sama kegunaannya. Beberapa distro seperti Debian (yang saya gunakan untuk membuat artikel ini) tidak menyediakan <strong><code>eza</code></strong> di <em>official repository</em>-nya, tapi menyediakan <strong><code>exa</code></strong>. Sebaliknya, distro lain (seperti Archlinux) mungkin tidak menyediakan <strong><code>exa</code></strong> di <em>repo</em>-nya, tapi menyediakan <strong><code>eza</code></strong>. Jadi, silakan <em>install</em> menyesuaikan dengan ketersidaan <em>package</em>-nya di masing-masing distro Linux.</p>
@@ -407,7 +407,7 @@
  </a>
   
 </h2>
-<p>Setelah selesai meng-<em>install</em> package <strong><code>exa</code></strong> / <strong><code>eza</code></strong>, kita juga perlu meng-<em>install</em> font yang mendukung icon <em>rendering</em> di terminal. Untuk kasus ini, kita bisa meng-<em>install</em> <strong><a href="https://www.nerdfonts.com/font-downloads" target="_blank">&ldquo;Symbols Nerd Font&rdquo;</a>
+<p>Setelah selesai meng-<em>install</em> <em>package</em> <strong><code>exa</code></strong> / <strong><code>eza</code></strong>, kita juga perlu meng-<em>install</em> font untuk menampilkan file icons di terminal. Untuk kasus ini, kita bisa meng-<em>install</em> <strong><a href="https://www.nerdfonts.com/font-downloads" target="_blank">&ldquo;Symbols Nerd Font&rdquo;</a>
 </strong> melalui langkah-langkah berikut:</p>
 <ol>
 <li><em>Download</em> font <strong>Symbols Nerd Font</strong> di tautan berikut: <a href="https://www.nerdfonts.com/font-downloads" target="_blank">https://www.nerdfonts.com/font-downloads</a>
