--- a/public/index.html
+++ b/public/index.html
@@ -269,7 +269,7 @@ Happy reading! 😃</p>
   
   
   <section class="list-item">
-    <h2 class="ft-title"><a href="/tech/exa/">Exa-Eza as a Modern Replacement of ls</a></h2>
+    <h2 class="ft-title"><a href="/tech/exa/">Exa-Eza as a Modern Replacement for ls</a></h2>
     <div class="meta">
       
 
