add new content chess/pop-tactics2.md

--- a/public/chess/pop-tactics/index.html
+++ b/public/chess/pop-tactics/index.html
@@ -16,7 +16,7 @@
   
   <meta name="description" content="This article shares about 3 popular tactics in chess, which are Fork, Pin, and Skewer." />
   
-  <meta name="keywords" content="chess, intro, tactics, " />
+  <meta name="keywords" content="chess, intro, tactics, fork, pin, skewer, " />
   <link rel="canonical" href="http://localhost:1313/chess/pop-tactics/" />
 
   
@@ -77,6 +77,9 @@
     <meta property="article:tag" content="Chess">
     <meta property="article:tag" content="Intro">
     <meta property="article:tag" content="Tactics">
+    <meta property="article:tag" content="Fork">
+    <meta property="article:tag" content="Pin">
+    <meta property="article:tag" content="Skewer">
 
   
   <meta name="twitter:card" content="summary">
@@ -313,6 +316,12 @@
   
   <a class="tag" href="/tags/tactics/">Tactics</a>
   
+  <a class="tag" href="/tags/fork/">Fork</a>
+  
+  <a class="tag" href="/tags/pin/">Pin</a>
+  
+  <a class="tag" href="/tags/skewer/">Skewer</a>
+  
 </p>
 
 
@@ -375,7 +384,7 @@ Pada dasarnya, taktik catur adalah gerakan / langkah (atau serangkaian langkah) 
  </a>
   
 </h3>
-<p>Sebagaimana namanya, <em><strong>Fork</strong></em> atau serangan garpuan adalah salah satu taktik catur dengan menyerang dua buah catur sekaligus. Oleh karena itu, taktik <em><strong>fork</strong></em> juga dapat disebut dengan serangan ganda atau <em>double attack</em>. Pihak lawan yang terkena taktik <em><strong>fork</strong></em> biasanya akan kesulitan untuk mempertahankan kedua buah catur yang terserang sehingga pihak penyerang akan mendapatkan salah satu buah catur yang terkena <em><strong>fork</strong></em> tersebut.
+<p>Sebagaimana namanya, <em><strong>Fork</strong></em> atau serangan garpuan adalah salah satu taktik catur dengan menyerang dua buah catur sekaligus dengan satu buah catur. Pihak lawan yang terkena taktik <em><strong>fork</strong></em> biasanya akan kesulitan untuk mempertahankan kedua buah catur yang terserang sehingga pihak penyerang akan mendapatkan salah satu buah catur yang terkena <em><strong>fork</strong></em> tersebut.
 Serangan <em><strong>fork</strong></em> pada Raja dan Menteri juga biasa disebut sebagai <em><strong>Royal Fork</strong></em>.</p>
 <p>Berikut adalah contoh taktik <em>fork</em>:</p>
 <table>
@@ -628,7 +637,11 @@ Teknik <em><strong>pinning</strong></em> ini hanya dapat dilakukan oleh perwira 
 
 <nav class="pagenav">
   
-  <div></div>
+    <a class="prev" href="/chess/pop-tactics2/">
+      <span class="direction">« Prev</span>
+      <br>
+      <span> Chess Tactics: Double Attack, Discovered Attack, Removing The Defender </span>
+    </a>
   
   
     <a class="next" href="/chess/intro/">
