--- a/public/tech/updisk/index.html
+++ b/public/tech/updisk/index.html
@@ -677,7 +677,7 @@
     <a class="prev" href="/tech/exa/">
       <span class="direction">« Prev</span>
       <br>
-      <span> Exa </span>
+      <span> Exa-Eza as a Modern Replacement for ls </span>
     </a>
   
   
