add new content: tech/tableau-basics

--- a/public/tech/exa/index.html
+++ b/public/tech/exa/index.html
@@ -518,7 +518,11 @@ Untuk mengaktifkan konfigurasi yang baru saja di-<em>input</em>-kan di <strong><
 
 <nav class="pagenav">
   
-  <div></div>
+    <a class="prev" href="/tech/tableau-basics/">
+      <span class="direction">« Prev</span>
+      <br>
+      <span> Tableau Public Basics: Creating A Simple Dashboard </span>
+    </a>
   
   
     <a class="next" href="/tech/updisk/">
