add tag data @ tech/sqlbasic.md

--- a/public/tech/sqlbasic/index.html
+++ b/public/tech/sqlbasic/index.html
@@ -16,7 +16,7 @@
   
   <meta name="description" content="Let&#39;s learn about SQL basic commands for databases." />
   
-  <meta name="keywords" content="sql, database, linux, " />
+  <meta name="keywords" content="sql, database, linux, data, " />
   <link rel="canonical" href="http://localhost:1313/tech/sqlbasic/" />
 
   
@@ -77,6 +77,7 @@
     <meta property="article:tag" content="Sql">
     <meta property="article:tag" content="Database">
     <meta property="article:tag" content="Linux">
+    <meta property="article:tag" content="Data">
 
   
   <meta name="twitter:card" content="summary">
@@ -312,6 +313,8 @@
   <a class="tag" href="/tags/database/">Database</a>
   
   <a class="tag" href="/tags/linux/">Linux</a>
+  
+  <a class="tag" href="/tags/data/">Data</a>
   
 </p>
 
