modify some configs 2

--- a/public/index.html
+++ b/public/index.html
@@ -582,7 +582,7 @@ Welcome to <b> &ldquo;My Awesome Site&rdquo;! </b></p>
 <script>
     document.addEventListener("DOMContentLoaded", function () {
       new TypeIt("#typeit-6fb22d3943ec7794c447a8e7c1bb77a4", {
-        strings: [""," Frankly, I am not a \u003cmark\u003e {hacker, programmer}\u003c/mark\u003e.  "," I am just an ordinary \u003cb\u003e\u003ci\u003e blogger that love \u003cmark\u003e linux\u003c/mark\u003e.\u003c/i\u003e\u003c/b\u003e",""],
+        strings: [""," Frankly, I am not a \u003cmark\u003e {hacker, programmer}\u003c/mark\u003e.  "," I am just an ordinary \u003cb\u003e\u003ci\u003e blogger who love \u003cmark\u003e linux\u003c/mark\u003e.\u003c/i\u003e\u003c/b\u003e",""],
         speed:  100 ,
         lifeLike:  true ,
         startDelay:  0 ,
