modify spotify section @Hugo-Advanced.md

--- a/public/tech/hugo-advanced/index.html
+++ b/public/tech/hugo-advanced/index.html
@@ -108,7 +108,7 @@
     "keywords": ["hugo","website","static-site"],
     
     "mainEntityOfPage": "true",
-    "wordCount": "1952"
+    "wordCount": "1953"
   }]
   </script>
 
@@ -2134,7 +2134,7 @@ Saya demokan salah satunya di sini, kita akan menambahkan sebuah playlist.</p>
   <span
     
       style="color: #000000"
-    >Jika meng-<em>embed</em> playlist/album, lagu-lagunya hanya akan berupa <em>preview</em> saja alias tidak akan bisa diputar penuh.</span>
+    >Track/playlist/album yang di-<em>embed</em> dari Spotify hanya akan berupa <em>preview</em> saja alias tidak akan bisa diputar penuh.</span>
 </div>
 
 
