--- a/public/gallery/wall/wall/index.html
+++ b/public/gallery/wall/wall/index.html
@@ -1132,6 +1132,7 @@
   <img src="/wall/wall8.jpg" class="grid-w50 md:grid-w33 xl:grid-w25" />
   <img src="/wall/wall9.jpg" class="grid-w50 md:grid-w33 xl:grid-w25" />
   <img src="/wall/wall10.jpg" class="grid-w50 md:grid-w33 xl:grid-w25" />
+  <img src="/wall/wall11.jpg" class="grid-w50 md:grid-w33 xl:grid-w25" />
 
   <img src="/wall/wall1.png" class="grid-w50 md:grid-w33 xl:grid-w25" />
   <img src="/wall/wall2.png" class="grid-w50 md:grid-w33 xl:grid-w25" />
