--- a/public/gallery/wall/index.html
+++ b/public/gallery/wall/index.html
@@ -796,6 +796,8 @@
   <img src="/wall/wall19.jpg" class="grid-w50 md:grid-w33 xl:grid-w25" />
   <img src="/wall/wall20.jpg" class="grid-w50 md:grid-w33 xl:grid-w25" />
   <img src="/wall/wall21.jpg" class="grid-w50 md:grid-w33 xl:grid-w25" />
+  <img src="/wall/wall22.jpg" class="grid-w50 md:grid-w33 xl:grid-w25" />
+  <img src="/wall/wall23.jpg" class="grid-w50 md:grid-w33 xl:grid-w25" />
 
   <img src="/wall/wall1.jpeg" class="grid-w50 md:grid-w33 xl:grid-w25" />
 
