edit some walls on wall.md

--- a/public/gallery/wall/index.html
+++ b/public/gallery/wall/index.html
@@ -108,7 +108,7 @@
     "keywords": ["wallpaper"],
     
     "mainEntityOfPage": "true",
-    "wordCount": "55"
+    "wordCount": "56"
   }]
   </script>
 
@@ -755,7 +755,7 @@
       
 <p><details >
   <summary markdown="span"><strong>About This Page</strong></summary>
-  <p>These are my personal wallpapers that I used to or have used in my Laptop. Mostly being crawled from famous wallpaper websites such as</p>
+  <p>These are my personal wallpapers that I used to or have used in my Laptop. They mostly are crawled from famous wallpaper websites such as</p>
 <ol>
 <li><a href="https://wallhaven.cc/" target="_blank"><strong>wallhaven</strong></a>,</li>
 <li><a href="https://www.wallpaperflare.com/" target="_blank"><strong>wallpaperflare</strong></a>,</li>
@@ -799,6 +799,7 @@
   <img src="/wall/wall22.jpg" class="grid-w50 md:grid-w33 xl:grid-w25" />
   <img src="/wall/wall23.jpg" class="grid-w50 md:grid-w33 xl:grid-w25" />
   <img src="/wall/wall24.jpg" class="grid-w50 md:grid-w33 xl:grid-w25" />
+  <img src="/wall/wall25.jpg" class="grid-w50 md:grid-w33 xl:grid-w25" />
 
   <img src="/wall/wall1.jpeg" class="grid-w50 md:grid-w33 xl:grid-w25" />
 
