--- a/public/gallery/wall/index.html
+++ b/public/gallery/wall/index.html
@@ -800,6 +800,7 @@
   <img src="/wall/wall23.jpg" class="grid-w50 md:grid-w33 xl:grid-w25" />
   <img src="/wall/wall24.jpg" class="grid-w50 md:grid-w33 xl:grid-w25" />
   <img src="/wall/wall25.jpg" class="grid-w50 md:grid-w33 xl:grid-w25" />
+  <img src="/wall/wall26.jpg" class="grid-w50 md:grid-w33 xl:grid-w25" />
 
   <img src="/wall/wall1.jpeg" class="grid-w50 md:grid-w33 xl:grid-w25" />
 
