--- a/public/tech/joinad/index.html
+++ b/public/tech/joinad/index.html
@@ -2415,7 +2415,7 @@ session optional        pam_mkhomedir.so skel=/etc/skel umask=077
               <span class="flex flex-col">
                 <span
                   class="mt-[0.1rem] leading-6 group-hover:underline group-hover:decoration-primary-500"
-                  >Linux Resource Monitoring Tools</span
+                  >5 Modern Linux Resource Monitoring Tools</span
                 >
                 <span class="mt-[0.1rem] text-xs text-neutral-500 dark:text-neutral-400">
                   
