modify summary recordmydesktop.md

--- a/public/tech/recordmydesktop/index.html
+++ b/public/tech/recordmydesktop/index.html
@@ -11,7 +11,7 @@
   <title>Recordmydesktop - Screen Recorder based on CLI &middot; My Awesome Site</title>
   <meta name="title" content="Recordmydesktop - Screen Recorder based on CLI &middot; My Awesome Site" />
   
-  <meta name="description" content="a simple command line tool that performs the basic tasks of capturing and encoding." />
+  <meta name="description" content="A simple command line tool that performs the basic tasks of capturing and encoding." />
   <meta name="keywords" content="screen recorder, tutorial, recordmydesktop, " />
   
   
@@ -70,7 +70,7 @@
   <meta property="og:url" content="http://localhost:1313/tech/recordmydesktop/">
   <meta property="og:site_name" content="My Awesome Site">
   <meta property="og:title" content="Recordmydesktop - Screen Recorder based on CLI">
-  <meta property="og:description" content="a simple command line tool that performs the basic tasks of capturing and encoding.">
+  <meta property="og:description" content="A simple command line tool that performs the basic tasks of capturing and encoding.">
   <meta property="og:locale" content="en">
   <meta property="og:type" content="article">
     <meta property="article:section" content="tech">
@@ -85,7 +85,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:image" content="http://localhost:1313/tech/recordmydesktop/featured.png">
   <meta name="twitter:title" content="Recordmydesktop - Screen Recorder based on CLI">
-  <meta name="twitter:description" content="a simple command line tool that performs the basic tasks of capturing and encoding.">
+  <meta name="twitter:description" content="A simple command line tool that performs the basic tasks of capturing and encoding.">
 
   
   <script type="application/ld+json">
@@ -96,7 +96,7 @@
     "name": "Recordmydesktop - Screen Recorder based on CLI",
     "headline": "Recordmydesktop - Screen Recorder based on CLI",
     
-    "abstract": "a simple command line tool that performs the basic tasks of capturing and encoding.",
+    "abstract": "A simple command line tool that performs the basic tasks of capturing and encoding.",
     "inLanguage": "en",
     "url" : "http:\/\/localhost:1313\/tech\/recordmydesktop\/",
     "author" : {
