--- a/public/tech/index.html
+++ b/public/tech/index.html
@@ -6850,7 +6850,7 @@
 
         
         <div class="py-1 prose dark:prose-invert">
-          a simple command line tool that performs the basic tasks of capturing and encoding.
+          A simple command line tool that performs the basic tasks of capturing and encoding.
         </div>
         
       </div>
