add new content tech/bluetoothctl.md

--- a/public/tech/luks/index.html
+++ b/public/tech/luks/index.html
@@ -1188,7 +1188,7 @@
         <li><a href="#1-mengengkripsi-partisi">1. Mengengkripsi partisi</a></li>
         <li><a href="#2-membuka-partisi-">2. Membuka partisi 🔑</a></li>
         <li><a href="#3-memformat-filesystem">3. Memformat filesystem</a></li>
-        <li><a href="#4-me-mounting-partisi-">4. Me-mounting partisi 🛄</a></li>
+        <li><a href="#4-mounting-partisi-">4. Mounting partisi 🛄</a></li>
         <li><a href="#5-unmount-partisi-">5. Unmount partisi 🛅</a></li>
         <li><a href="#6-menutup-partisi-">6. Menutup partisi 🔐</a></li>
       </ul>
@@ -1214,7 +1214,7 @@
         <li><a href="#1-mengengkripsi-partisi">1. Mengengkripsi partisi</a></li>
         <li><a href="#2-membuka-partisi-">2. Membuka partisi 🔑</a></li>
         <li><a href="#3-memformat-filesystem">3. Memformat filesystem</a></li>
-        <li><a href="#4-me-mounting-partisi-">4. Me-mounting partisi 🛄</a></li>
+        <li><a href="#4-mounting-partisi-">4. Mounting partisi 🛄</a></li>
         <li><a href="#5-unmount-partisi-">5. Unmount partisi 🛅</a></li>
         <li><a href="#6-menutup-partisi-">6. Menutup partisi 🔐</a></li>
       </ul>
@@ -1527,13 +1527,13 @@
 </p>
 
 
-<h3 class="relative group">4. Me-mounting partisi 🛄 
-    <div id="4-me-mounting-partisi-" class="anchor"></div>
+<h3 class="relative group">4. Mounting partisi 🛄 
+    <div id="4-mounting-partisi-" class="anchor"></div>
     
     <span
         class="absolute top-0 w-6 transition-opacity opacity-0 ltr:-left-6 rtl:-right-6 not-prose group-hover:opacity-100">
         <a class="group-hover:text-primary-300 dark:group-hover:text-neutral-700"
-            style="text-decoration-line: none !important;" href="#4-me-mounting-partisi-" aria-label="Anchor">#</a>
+            style="text-decoration-line: none !important;" href="#4-mounting-partisi-" aria-label="Anchor">#</a>
     </span>        
     
 </h3>
