--- a/public/tech/virustotal/index.html
+++ b/public/tech/virustotal/index.html
@@ -1934,7 +1934,7 @@ Sampai jumpa lagi!</p>
 
         
         <div class="py-1 prose dark:prose-invert">
-          a simple command line tool that performs the basic tasks of capturing and encoding.
+          A simple command line tool that performs the basic tasks of capturing and encoding.
         </div>
         
       </div>
