--- a/public/tech/eternalblue/index.html
+++ b/public/tech/eternalblue/index.html
@@ -1893,7 +1893,7 @@ Cara menonaktifkan SMBv1 dapat dilakukan dengan mengetikkan perintah berikut di 
 
         
         <div class="py-1 prose dark:prose-invert">
-          a simple command line tool that performs the basic tasks of capturing and encoding.
+          A simple command line tool that performs the basic tasks of capturing and encoding.
         </div>
         
       </div>
