--- a/public/tech/mystiq/index.html
+++ b/public/tech/mystiq/index.html
@@ -11,7 +11,7 @@
   <title>Mystiq - FFmpeg&#39;s GUI &middot; My Awesome Site</title>
   <meta name="title" content="Mystiq - FFmpeg&#39;s GUI &middot; My Awesome Site" />
   
-  <meta name="description" content="It is as the title says, &#39;A FFMPEG GUI&#39;" />
+  <meta name="description" content="Do you know FFmpeg? This is the GUI version of it. (If you don&#39;t like FFmpeg CLI version, this is the your right choice!)" />
   <meta name="keywords" content="mystiq, ffmpeg, tutorial, " />
   
   
@@ -70,7 +70,7 @@
   <meta property="og:url" content="http://localhost:1313/tech/mystiq/">
   <meta property="og:site_name" content="My Awesome Site">
   <meta property="og:title" content="Mystiq - FFmpeg&#39;s GUI">
-  <meta property="og:description" content="It is as the title says, ‘A FFMPEG GUI’">
+  <meta property="og:description" content="Do you know FFmpeg? This is the GUI version of it. (If you don’t like FFmpeg CLI version, this is the your right choice!)">
   <meta property="og:locale" content="en">
   <meta property="og:type" content="article">
     <meta property="article:section" content="tech">
@@ -85,7 +85,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:image" content="http://localhost:1313/tech/mystiq/featured.png">
   <meta name="twitter:title" content="Mystiq - FFmpeg&#39;s GUI">
-  <meta name="twitter:description" content="It is as the title says, ‘A FFMPEG GUI’">
+  <meta name="twitter:description" content="Do you know FFmpeg? This is the GUI version of it. (If you don’t like FFmpeg CLI version, this is the your right choice!)">
 
   
   <script type="application/ld+json">
@@ -96,7 +96,7 @@
     "name": "Mystiq - FFmpeg\u0027s GUI",
     "headline": "Mystiq - FFmpeg\u0027s GUI",
     
-    "abstract": "It is as the title says, \u0026lsquo;A FFMPEG GUI\u0026rsquo;",
+    "abstract": "Do you know FFmpeg? This is the GUI version of it. (If you don\u0026rsquo;t like FFmpeg CLI version, this is the your right choice!)",
     "inLanguage": "en",
     "url" : "http:\/\/localhost:1313\/tech\/mystiq\/",
     "author" : {
