--- a/public/tech/convertvideoformat/index.html
+++ b/public/tech/convertvideoformat/index.html
@@ -1797,7 +1797,7 @@
 
         
         <div class="py-1 prose dark:prose-invert">
-          It is as the title says, &lsquo;A FFMPEG GUI&rsquo;
+          Do you know FFmpeg? This is the GUI version of it. (If you don&rsquo;t like FFmpeg CLI version, this is the your right choice!)
         </div>
         
       </div>
