add new content tech/mountntfs.md

--- a/public/gallery/wall/index.html
+++ b/public/gallery/wall/index.html
@@ -801,6 +801,7 @@
   <img src="/wall/wall24.jpg" class="grid-w50 md:grid-w33 xl:grid-w25" />
   <img src="/wall/wall25.jpg" class="grid-w50 md:grid-w33 xl:grid-w25" />
   <img src="/wall/wall26.jpg" class="grid-w50 md:grid-w33 xl:grid-w25" />
+  <img src="/wall/wall27.jpg" class="grid-w50 md:grid-w33 xl:grid-w25" />
 
   <img src="/wall/wall1.jpeg" class="grid-w50 md:grid-w33 xl:grid-w25" />
 
