add cover post tech/mountntfs.md

--- a/public/tech/mountntfs/index.html
+++ b/public/tech/mountntfs/index.html
@@ -81,9 +81,11 @@
     <meta property="article:tag" content="Partition">
     <meta property="article:tag" content="Filesystem">
     <meta property="article:tag" content="Ntfs">
+    <meta property="og:image" content="http://localhost:1313/tech/mountntfs/featured.png">
 
   
-  <meta name="twitter:card" content="summary">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:image" content="http://localhost:1313/tech/mountntfs/featured.png">
   <meta name="twitter:title" content="Having A Problem to Mount NTFS via Terminal?">
   <meta name="twitter:description" content="Solving the NTFS problem while mounting it through terminal.">
 
@@ -720,12 +722,6 @@
   
   
   
- 
-  
-   
-  
- 
-
 
 
 <div id="hero" class="h-[150px] md:h-[200px]"></div>
@@ -734,7 +730,7 @@
 
     
     <div class="fixed inset-x-0 top-0 h-[800px] single_hero_background nozoom"
-    style="background-image:url(/img/blue-aqua_hu_6efeced160f7cdc7.jpg);">
+    style="background-image:url(/tech/mountntfs/featured_hu_5be36f92697e7d8f.png);">
     
 
 
